# cmake_template

./: README.md
1.顶层目录_可执行/c/: CMakeLists.txt
1.顶层目录_可执行/cpp/: CMakeLists.txt  hello.cpp  hello.h  main.cpp  readme.md
2.编译动态库/c/: readme.md
2.编译动态库/c/hello/: CMakeLists.txt
2.编译动态库/c/world/: CMakeLists.txt  world.c
2.编译动态库/cpp/: CMakeLists.txt
3.编译静态库/c/hello/: CMakeLists.txt
3.编译静态库/c/world/: CMakeLists.txt
4.同时编译动态库和静态库/c/hello/: CMakeLists.txt  hello.c
4.同时编译动态库和静态库/cpp/world/: CMakeLists.txt  world.cpp
5.链接动态库/c/exe/src/: main.c
5.链接动态库/c/lib/: CMakeLists.txt
5.链接动态库/c/lib/world/: world.h
5.链接动态库/cpp/exe/src/: CMakeLists.txt  main.cpp
6.链接静态库/c/exe/src/: CMakeLists.txt
6.链接静态库/c/lib/world/: CMakeLists.txt
6.链接静态库/cpp/exe/: readme.md
6.链接静态库/cpp/exe/include/: hello.h  world.h
7.多级目录_可执行/cpp/src/: CMakeLists.txt
7.多级目录_可执行/cpp/src/hello/: hello.cpp
7.多级目录_可执行/cpp/src/world/: world.cpp
8.多级目录_动态库+可执行/cpp/src/hello/: CMakeLists.txt
8.多级目录_动态库+可执行/cpp/src/world/: CMakeLists.txt  world.h
9.多级目录_静态库+可执行/c/src/hello/: CMakeLists.txt
9.多级目录_静态库+可执行/c/src/world/: CMakeLists.txt
9.多级目录_静态库+可执行/cpp/: CMakeLists.txt
9.多级目录_静态库+可执行/cpp/src/: CMakeLists.txt
